# initramfs-slots-boot

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  integration.yml  release.yml
initramfs/dracut/90slots/: module-setup.sh  slots-boot.service  slots-hook.sh
initramfs/initramfs-tools/hooks/: slots
initramfs/initramfs-tools/scripts/init-premount/: slots
initramfs/mkinitcpio/hooks/: slots
initramfs/mkinitcpio/install/: slots
packaging/arch/: PKGBUILD  slots-boot.install
packaging/debian/: build-deb.sh  changelog  control  postinst  postrm  rules
packaging/dracut/: 90-slots.conf
packaging/fedora/: slots-boot.spec
src/: main.rs  rng.rs  slot.rs  term.rs  ui.rs
test/docker/: Dockerfile  run-tests.sh
test/integration/: README.md  arch.sh  fedora.sh  lib.sh  run.sh  serial_driver.py  ubuntu.sh
test/qemu/: build-initramfs.sh  init  run.sh
